--- a/client/views/app/menu-items/details/image/image.html
+++ b/client/views/app/menu-items/details/image/image.html
@@ -4,12 +4,12 @@
       <div class="col-sm-9">
         <div class="menuImageDiv">
           <div class="uploadedImageDiv">
-            {{#if item.image}}
+            {{#if image}}
               <a href="#">
                 <span class="corner"></span>
 
                 <div class="image">
-                  <img src="{{item.image}}" class="img-responsive menu-item-image">
+                  <img src="{{image}}" class="img-responsive menu-item-image">
                 </div>
               </a>
             {{/if}}
