--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -5,7 +5,7 @@
 
 .menu-item-image, .content & > p & > img {
   width: 100% !important;
-  height: 191px !important;
+  height: auto !important;
 }
 
 .ibox-content & > div & > img, .col-md-12 & > .ibox & > .ibox-content & > img, .panel-body & > div & > img, .panel-body & > p & > div & > img, .panel-body & > p & > img, .panel-body & > img, .note-editable & > div & > img, .note-editable & > img, .content & > p & > div & > img {
