--- a/client/views/app/common/autosave-text-editor/autosave-text-editor.html
+++ b/client/views/app/common/autosave-text-editor/autosave-text-editor.html
@@ -1,14 +1,18 @@
 <template name="autosaveTextEditor">
   <div class="autosave-text-editor-container">
-    {{# if isEditableMode}}
-      <div>
-        <div class="status-text text-muted">{{statusText}}</div>
-        {{> textEditor initialHtml=text}}
-      </div>
+    {{#if readOnly}}
+      {{{text}}}
     {{else}}
-      <div class="text-editor-content">
-        {{{text}}}
-      </div>
+      {{# if isEditableMode}}
+        <div>
+          <div class="status-text text-muted">{{statusText}}</div>
+          {{> textEditor initialHtml=text}}
+        </div>
+      {{else}}
+        <div class="text-editor-content">
+          {{{text}}}
+        </div>
+      {{/if}}
     {{/if}}
   </div>
 </template>
