added files and related items widgets to the meeting details
fixed bugs with publication

added meeting change logger

--- a/client/views/app/meetings/meeting-details/meeting-details.html
+++ b/client/views/app/meetings/meeting-details/meeting-details.html
@@ -95,6 +95,18 @@
           </div>
         </div>
       </div>
+
+      <div class="row m-t-sm">
+        <div class="col-xs-12">
+          {{> files referenceId=id}}
+        </div>
+      </div>
+
+      <div class="row m-t-sm">
+        <div class="col-xs-12">
+          {{> relatedItems referenceId=id}}
+        </div>
+      </div>
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-4 no-padding">
