Added links to elevio modules to side navifation

--- a/client/views/app/navigations/navigation/navigation.html
+++ b/client/views/app/navigations/navigation/navigation.html
@@ -18,6 +18,13 @@
             {{/each}}
           {{/if}}
         {{/if}}
+
+        <li class="landing_link">
+          <a href="#" class="open-self-help"><i class="fa fa-question"></i> Self Help</a>
+        </li>
+        <li class="landing_link">
+          <a href="#" class="open-chat-with-support"><i class="fa fa-comments-o"></i> Chat with Support</a>
+        </li>
       </ul>
     </div>
   </nav>
