--- a/client/views/app/common/files-widget/files-widget.html
+++ b/client/views/app/common/files-widget/files-widget.html
@@ -1,19 +1,20 @@
 <template name="files">
-  <div class="col-xs-12 no-padding">
-    <h3>
-      Files
-      <button type="button" class="btn pull-right btn-xs btn-primary attach-file">Attach File</button>
-    </h3>
-
-    {{#if files.count}}
-    <div class="ibox-content no-padding">
-      <ul class="list-group">
-        {{#each files}}
-          {{> fileItem this}}
-        {{/each}}
-      </ul>
+  <div class="ibox float-e-margins">
+    <div class="ibox-title">
+      <h5>Files</h5>
+      <div class="ibox-tools pull-right">
+        <a class="btn btn-primary btn-xs pull-left attach-file" href="#">Attach File</a>
+        <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
+      </div>
     </div>
+    {{#if files.count}}
+      <div class="ibox-content no-padding white-bg">
+        <ul class="list-group">
+          {{#each files}}
+            {{> fileItem this}}
+          {{/each}}
+        </ul>
+      </div>
     {{/if}}
-    <hr>
   </div>
 </template>
