--- a/client/views/app/common/related-items/related-item/related-item.html
+++ b/client/views/app/common/related-items/related-item/related-item.html
@@ -3,7 +3,7 @@
     <a href="{{url}}" class="label label-default pull-right">
       <i class="fa fa-caret-right"></i>
     </a>
-    <a class="m-r-sm">{{name}}</a>
+    <span class="m-r-sm">{{name}}</span>
     <span class="label label-info">{{type}}</span>
   </li>
 </template>
