--- a/client/views/app/common/related-items/related-items.html
+++ b/client/views/app/common/related-items/related-items.html
@@ -1,20 +1,19 @@
 <template name="relatedItems">
-  <div class="col-xs-12 no-padding">
-    <h3>
-      Related Items:
-      <button type="button" class="btn pull-right btn-xs btn-primary attach-item">
-        Attach Item
-      </button>
-    </h3>
-
+  <div class="ibox float-e-margins">
+    <div class="ibox-title">
+      <h5>Related Items</h5>
+      <div class="ibox-tools pull-right">
+        <a class="btn btn-primary btn-xs pull-left attach-item" href="#">Attach Item</a>
+        <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
+      </div>
+    </div>
     {{#if relatedItems.count}}
-      <div class="ibox-content no-padding">
+      <div class="ibox-content no-padding white-bg">
         <ul class="list-group">
           {{#each relatedItems}}
             {{> relatedItem this}}
           {{/each}}
         </ul>
-        <hr>
       </div>
     {{/if}}
   </div>
