Hid elevio help button

--- a/client/stylesheets/components/common.less
+++ b/client/stylesheets/components/common.less
@@ -24,3 +24,8 @@
     z-index: 100 !important;
   }
 }
+
+//for hiding help button of elevio, it is impossible to do by api
+.elevio-button-cta {
+  display: none !important;
+}
