Refactored method for open elevio modules

--- a/client/views/app/navigations/navigation/navigation.html
+++ b/client/views/app/navigations/navigation/navigation.html
@@ -20,10 +20,14 @@
         {{/if}}
 
         <li class="landing_link">
-          <a href="#" class="open-self-help"><i class="fa fa-question"></i> Self Help</a>
+          <a href="#" class="open-elevio-module" data-elevio-module-name="articles">
+            <i class="fa fa-question"></i> Self Help
+          </a>
         </li>
         <li class="landing_link">
-          <a href="#" class="open-chat-with-support"><i class="fa fa-comments-o"></i> Chat with Support</a>
+          <a href="#" class="open-elevio-module" data-elevio-module-name="intercom">
+            <i class="fa fa-comments-o"></i> Chat with Support
+          </a>
         </li>
       </ul>
     </div>
