--- a/client/views/app/menu-items/details/performance/performance.html
+++ b/client/views/app/menu-items/details/performance/performance.html
@@ -1,6 +1,6 @@
 <template name="menuDetailPerformance">
   <div class="ibox panel panel-default">
-    {{#collapsibleMenuItemElement options=performanceOptions}}
+    {{#collapsibleElement options=performanceOptions}}
       <ul class="list-group">
         <li class="list-group-item">
           <div class="row">
@@ -88,6 +88,6 @@
           </div>
         </li>
       </ul>
-    {{/collapsibleMenuItemElement}}
+    {{/collapsibleElement}}
   </div>
 </template>
