--- a/client/views/app/navigations/navigation/navigation.less
+++ b/client/views/app/navigations/navigation/navigation.less
@@ -1,5 +1,23 @@
+@import "../../../../stylesheets/theme-globals.import.less";
+
 .nav-header {
   .profile-element {
     font-weight: 600;
+  }
+}
+
+//for correct displaying active links of current elevio module
+.elevio-open {
+  body:not(.intercom-messenger-active){
+    a[data-elevio-module-name=articles] {
+      background: lighten(@navy, 3%) !important;
+      color: white !important;
+    }
+  }
+  body.intercom-messenger-active {
+    a[data-elevio-module-name=intercom] {
+      background: lighten(@navy, 3%) !important;
+      color: white !important;
+    }
   }
 }
