--- a/client/views/app/common/combo-time-editable/combo-time-editable.html
+++ b/client/views/app/common/combo-time-editable/combo-time-editable.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     {{else}}
-      <i class="fa fa-clock-o"></i>
+      <!--<i class="fa fa-clock-o"></i>-->
       <a href="#" class="time">
         {{firstTime}}
         {{#if isTimeRangeMode}}
