--- a/client/views/app/common/files-widget/files-widget.html
+++ b/client/views/app/common/files-widget/files-widget.html
@@ -1,20 +1,17 @@
-<template name="files">
+<template name="filesWidget">
   <div class="ibox float-e-margins">
-    <div class="ibox-title">
-      <h5>Files</h5>
-      <div class="ibox-tools pull-right">
-        <a class="btn btn-primary btn-xs pull-left attach-file" href="#">Attach File</a>
-        <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
-      </div>
-    </div>
-    {{#if files.count}}
+    {{#collapsibleElement options=filesOptions}}
       <div class="ibox-content no-padding white-bg">
-        <ul class="list-group">
-          {{#each files}}
-            {{> fileItem this}}
-          {{/each}}
-        </ul>
+        {{#if files.count}}
+          <ul class="list-group">
+            {{#each files}}
+              {{> filesWidgetItem this}}
+            {{/each}}
+          </ul>
+        {{else}}
+          <h4 class="text-center">No files yet</h4>
+        {{/if}}
       </div>
-    {{/if}}
+    {{/collapsibleElement}}
   </div>
 </template>
