--- a/client/views/app/tasks/task-widget/task-widget.html
+++ b/client/views/app/tasks/task-widget/task-widget.html
@@ -22,7 +22,7 @@
             </table>
           </div>
         {{else}}
-          <h3>No tasks here</h3>
+          <h4 class="text-center">No tasks yet</h4>
         {{/if}}
       {{/collapsibleElement}}
     </div>
