--- a/client/views/app/common/related-items/related-item/related-item.html
+++ b/client/views/app/common/related-items/related-item/related-item.html
@@ -1,4 +1,4 @@
-<template name="relatedItem">
+<template name="relatedItemsWidgetItem">
   <li class="list-group-item">
     <a href="{{url}}" class="label label-default pull-right">
       <i class="fa fa-caret-right"></i>
