refactored code for collapsible element

--- a/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
+++ b/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
@@ -1,6 +1,6 @@
 <template name="menuItemsListByType">
   <div class="ibox panel panel-default">
-    {{#collapsibleElement options=options}}
+    {{#collapsibleElement settings=settings}}
       <table class="table table-striped">
         <thead>
         <tr>
