--- a/client/views/app/common/collapsible-element/collapsible-element.html
+++ b/client/views/app/common/collapsible-element/collapsible-element.html
@@ -1,22 +1,20 @@
 <template name="collapsibleElement">
   <div class="ibox-title">
-    <h5>{{options.title}} &nbsp;</h5>
+    <h5>{{settings.title}} &nbsp;</h5>
     <div class="ibox-tools">
-      {{#if userCanEdit}}
-        {{#if options.url}}
-          <a href="{{options.url}}" class="{{options.className}}">
-            {{#if options.icon}}<i class="{{options.icon}}"></i>{{/if}}
-            {{#if options.text}}{{options.text}}{{/if}}
-          </a>
-        {{/if}}
-      {{/if}}
-      <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#{{options.uiStateId}}"
-         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="{{options.uiStateId}}">
+      {{#each settings.buttons}}
+        <a href="{{url}}" class="{{className}}">
+          {{#if icon}}<i class="{{icon}}"></i>{{/if}}
+          {{#if text}}{{text}}{{/if}}
+        </a>
+      {{/each}}
+      <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#{{settings.uiStateId}}"
+         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="{{settings.uiStateId}}">
         <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
     </div>
   </div>
-  <div id="{{options.uiStateId}}" class="content {{#if collapsed}}hide{{else}}show{{/if}}-content ibox-content panel-body
-                                    {{options.contentPadding}} collapse {{#if collapsed}}in{{/if}}"
+  <div id="{{settings.uiStateId}}" class="collapsible-element-content ibox-content panel-body
+                                    {{settings.contentPadding}} collapse {{#if collapsed}}in{{/if}}"
        aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
     {{> Template.contentBlock}}
   </div>
