--- a/client/views/app/meetings/meeting-details/meeting-details.html
+++ b/client/views/app/meetings/meeting-details/meeting-details.html
@@ -6,14 +6,7 @@
       <div class="wrapper wrapper-content fadeInUp">
         <div class="ibox">
           <div class="ibox float-e-margins">
-            <div class="ibox-title">
-              <h5>Meeting Details:</h5>
-
-              <div class="ibox-tools">
-                <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
-              </div>
-            </div>
-            <div class="ibox-content no-padding">
+            {{#collapsibleElement options=meetingDetailsOptions}}
               <table class="table">
                 <thead>
                 <tr>
@@ -84,22 +77,15 @@
                 </tr>
                 </tbody>
               </table>
-            </div>
+            {{/collapsibleElement}}
           </div>
 
           <div class="row m-t-sm">
             <div class="col-lg-12">
               <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                  <h5>Agenda & Minutes</h5>
-
-                  <div class="ibox-tools">
-                    <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
-                  </div>
-                </div>
-                <div class="ibox-content">
+                {{#collapsibleElement options=agendaOptions}}
                   {{> autosaveTextEditor text=agendaAndMinutes saveChanges=saveChanges}}
-                </div>
+                {{/collapsibleElement}}
               </div>
             </div>
           </div>
@@ -108,13 +94,19 @@
 
       <div class="row m-t-sm">
         <div class="col-xs-12">
-          {{> files referenceId=id}}
+          {{> taskWidget itemId=id type="meeting"}}
         </div>
       </div>
 
       <div class="row m-t-sm">
         <div class="col-xs-12">
-          {{> relatedItems referenceId=id}}
+          {{> files referenceId=id type="meeting"}}
+        </div>
+      </div>
+
+      <div class="row m-t-sm">
+        <div class="col-xs-12">
+          {{> relatedItems referenceId=id type="meeting"}}
         </div>
       </div>
     </div>
