fixed tasks widget

--- a/client/views/app/meetings/meeting-details/meeting-details.html
+++ b/client/views/app/meetings/meeting-details/meeting-details.html
@@ -94,7 +94,7 @@
 
       <div class="row m-t-sm">
         <div class="col-xs-12">
-          {{> taskWidget itemId=id type="meeting"}}
+          {{> taskWidget itemId=id type="meetings"}}
         </div>
       </div>
 
