--- a/client/views/app/common/collapsible-element/collapsible-element.html
+++ b/client/views/app/common/collapsible-element/collapsible-element.html
@@ -8,13 +8,18 @@
           {{#if text}}{{text}}{{/if}}
         </a>
       {{/each}}
-      <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#{{settings.uiStateId}}"
-         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="{{settings.uiStateId}}">
-        <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
+      <a class="{{#if collapsed}}collapsed{{/if}}"
+         data-toggle="collapse"
+         data-target="#{{settings.uiStateId}}"
+         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}"
+         aria-controls="{{settings.uiStateId}}">
+        <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i>
+      </a>
     </div>
   </div>
-  <div id="{{settings.uiStateId}}" class="collapsible-element-content ibox-content panel-body
-                                    {{settings.contentPadding}} collapse {{#if collapsed}}in{{/if}}"
+  <div id="{{settings.uiStateId}}"
+       class=".collapsible-element-content ibox-content panel-body {{panelBodyClasses collapsed}}"
+       style="{{#if contentPadding}}padding: {{contentPadding}}{{/if}}"
        aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
     {{> Template.contentBlock}}
   </div>
