fixes for menu detail

--- a/client/views/app/common/collapsible-element/collapsible-element.html
+++ b/client/views/app/common/collapsible-element/collapsible-element.html
@@ -18,9 +18,10 @@
     </div>
   </div>
   <div id="{{settings.uiStateId}}"
-       class=".collapsible-element-content ibox-content panel-body {{panelBodyClasses collapsed}}"
-       style="{{#if contentPadding}}padding: {{contentPadding}}{{/if}}"
+       class="collapsible-element-content ibox-content panel-body no-padding {{panelBodyClasses collapsed}}"
        aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
-    {{> Template.contentBlock}}
+    <div style="{{#if settings.contentPadding}}padding: {{settings.contentPadding}}{{/if}}">
+      {{> Template.contentBlock}}
+    </div>
   </div>
 </template>
