Get rid of admin menu view

--- a/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
@@ -5,14 +5,8 @@
   </div>
   <div class="flyout-content">
     <div class="row">
-      <div class="col-lg-12">
-        <ul class="list-group" style="display: block;">
-        </ul>
-      </div>
-    </div>
-    <div class="row" style="display: block;">
-      <div class="col-md-12" style="display: block;">
-        <ul class="list-group" style="display: block;">
+      <div class="col-md-12">
+        <ul class="list-group">
           <li class="list-group-item change-billing-account-flyout">
             <span class="badge">
               <i class="fa fa-fw fa-angle-right"></i>
@@ -42,7 +36,6 @@
         </ul>
       </div>
     </div>
-    <div class="row" style="display: block;"></div>
     <hr/>
     <button type="button" class="btn btn-danger btn-block delete-organization">Delete
       Organization
