--- a/client/views/app/common/files-widget/files-widget.html
+++ b/client/views/app/common/files-widget/files-widget.html
@@ -1,6 +1,6 @@
 <template name="filesWidget">
   <div class="ibox float-e-margins">
-    {{#collapsibleElement options=filesOptions}}
+    {{#collapsibleElement settings=filesOptions}}
       <div class="ibox-content no-padding white-bg">
         {{#if files.count}}
           <ul class="list-group">
