--- a/client/views/app/common/collapsible-element/collapsible-element.html
+++ b/client/views/app/common/collapsible-element/collapsible-element.html
@@ -1,7 +1,7 @@
 <template name="collapsibleElement">
   <div class="ibox-title">
     <h5>{{settings.title}} &nbsp;</h5>
-    <div class="ibox-tools">
+    <div class="ibox-tools pull-right">
       {{#each settings.buttons}}
         <a href="{{url}}" class="{{className}}">
           {{#if icon}}<i class="{{icon}}"></i>{{/if}}
