--- a/client/views/app/reports/team-hours/team-hours-item/team-hours-item.html
+++ b/client/views/app/reports/team-hours/team-hours-item/team-hours-item.html
@@ -1,9 +1,9 @@
 <template name="teamHoursItem">
-  {{#if hasWage state$weeklyValues}}
+  {{#if hasWage weeklyValues}}
     <tr class="gradeX">
       <td>{{username user._id}}</td>
-      <td>{{state$weeklyValues.time}}</td>
-      <td>${{state$weeklyValues.wage}}</td>
+      <td>{{weeklyValues.time}}</td>
+      <td>${{weeklyValues.wage}}</td>
       {{#if isShowShifts}}
         {{#each weekDays}}
           <td class="center activeTime">
@@ -11,7 +11,7 @@
           </td>
         {{/each}}
       {{else}}
-        {{#each state$weeklyValues.dailyHours}}
+        {{#each weeklyValues.dailyHours}}
           <td class="center activeTime">
             {{#if hasActiveTime}} {{this}} {{else}} - {{/if}}
           </td>
