--- a/client/views/app/reports/team-hours/team-hours-item/report-data/report-data.html
+++ b/client/views/app/reports/team-hours/team-hours-item/report-data/report-data.html
@@ -1,8 +1,14 @@
 <template name="reportData">
   {{#if shift}}
-    {{#with startedTimeParams shift}}
-      {{> comboTimeEditable params=this}}
-    {{/with}}
+    {{> comboTimeEditable params=startedTimeParams}}
+
+    {{#if isMidnight}}
+      <i class="fa fa-moon-o midnight-icon" title="Midnight shift"></i>
+    {{/if}}
+
+    {{#if isClockedIn}}
+      <a href="#" class="stop-current-shift-button">Stop</a>
+    {{/if}}
   {{else}}
     -
   {{/if}}
