--- a/client/views/app/reports/team-hours/team-hours-item/team-hours-item.html
+++ b/client/views/app/reports/team-hours/team-hours-item/team-hours-item.html
@@ -7,7 +7,7 @@
       {{#if isShowShifts}}
         {{#each weekDays}}
           <td class="center activeTime">
-            {{> reportData date=this userId=../user._id}}
+            {{> reportData date=this shift=dailyShift}}
           </td>
         {{/each}}
       {{else}}
