Add copy/paste for shifts on the roster

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
@@ -3,6 +3,7 @@
     {{#if canEditRoster}}
       <div class="box-wrapper pull-right shift-remove-wrapper">
         <span class="box-remove glyphicon glyphicon-remove remove-shift-button"></span>
+        <i class="fa fa-files-o copy-shift-button"></i>
       </div>
     {{/if}}
 
