--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
@@ -29,6 +29,14 @@
               <i class="fa fa-plus"></i> Add Shift
             </button>
           </span>
+
+        {{#if hasCopiedShift}}
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-sm btn-white paste-shift-button">
+              <i class="fa fa-clipboard"></i>
+            </button>
+          </span>
+        {{/if}}
       </div>
     {{/if}}
 
