--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
@@ -32,7 +32,7 @@
 
         {{#if hasCopiedShift}}
           <span class="input-group-btn">
-            <button type="button" class="btn btn-sm btn-white paste-shift-button">
+            <button type="button" class="btn btn-sm btn-white btn-block paste-shift-button">
               <i class="fa fa-clipboard"></i>
             </button>
           </span>
