--- a/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
+++ b/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
@@ -1,6 +1,6 @@
 <template name="ordersReceiptsList">
-  <div class="col-lg-12">
-    <div class="ibox ">
+  <div class="col-lg-12 orders-receipts">
+    <div class="ibox">
       <div class="ibox-content">
         <div class="btn-group">
           <a href="#" 
@@ -30,7 +30,7 @@
               <th>Date expected</th>
               <th>Supplier</th>
               <th>Ordered Value</th>
-              <th>Actual Invoiced Amount</th>
+              <th>Received Amount</th>
               <th>Received</th>
               <th>Invoice Uploaded</th>
             </tr>
@@ -46,5 +46,8 @@
         </div>
       </div>
     </div>
+    {{#unless showLoadMoreOrdersButton}}
+      <button class="btn btn-white btn-center load-more-orders">Load more</button>
+    {{/unless}}
   </div>
 </template>
