--- a/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
+++ b/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
@@ -3,23 +3,14 @@
     <div class="ibox">
       <div class="ibox-content">
         <div class="btn-group">
-          <a href="#" 
-            class="btn btn-white orders-status {{#unless showsReceivedOrders}} active {{/unless}}" 
-            data-orders-status="toBeReceived">To be received</a>
-          <a href="#" 
-            class="btn btn-white orders-status {{#if showsReceivedOrders}} active {{/if}}" 
-            data-orders-status="received">Received</a>
+          {{#each receivingOrdersButtons}}
+            {{> orderReceiptsButtons}}
+          {{/each}}
         </div>
         <div class="btn-group">
-          <a href="#" 
-            class="btn btn-white period-of-orders {{#if isCurrentPeriodOfOrders 'week'}} active {{/if}}"
-            data-period-of-orders="week">This week</a>
-          <a href="#" 
-            class="btn btn-white period-of-orders {{#if isCurrentPeriodOfOrders 'month'}} active {{/if}}"
-            data-period-of-orders="month">This month</a>
-          <a href="#" 
-            class="btn btn-white period-of-orders {{#if isCurrentPeriodOfOrders 'allTime'}} active {{/if}}"
-            data-period-of-orders="allTime">All time</a>
+          {{#each periodOfOrders}}
+            {{> orderReceiptsButtons}}
+          {{/each}}
         </div>
         <hr>
         <div class="table-responsive">
@@ -27,12 +18,9 @@
           <table class="table table-condensed table-hover table-striped">
             <thead>
             <tr>
-              <th>Date expected</th>
-              <th>Supplier</th>
-              <th>Ordered Value</th>
-              <th>Received Amount</th>
-              <th>Received</th>
-              <th>Invoice Uploaded</th>
+              {{#each tableHeaderItems}}
+                <th>{{this}}</th>
+              {{/each}}
             </tr>
             </thead>
             <tbody>
