--- a/client/views/app/navigations/navigation/navigation.html
+++ b/client/views/app/navigations/navigation/navigation.html
@@ -19,16 +19,8 @@
           {{/if}}
         {{/if}}
 
-        <li>
-          <a href="#" class="open-elevio-module" data-elevio-module-name="articles">
-            <i class="fa fa-question"></i> Self Help
-          </a>
-        </li>
-        <li>
-          <a href="#" class="open-elevio-module" data-elevio-module-name="intercom">
-            <i class="fa fa-comments-o"></i> Chat with Support
-          </a>
-        </li>
+        {{> helpMenu}}
+
       </ul>
     </div>
   </nav>
