--- a/client/views/app/navigations/navigation/navigation.less
+++ b/client/views/app/navigations/navigation/navigation.less
@@ -9,15 +9,31 @@
 //for correct displaying active links of current elevio module
 .elevio-open {
   body:not(.intercom-messenger-active){
-    a[data-elevio-module-name=articles] {
-      background: lighten(@navy, 3%) !important;
-      color: white !important;
+    #side-menu > li:last-child {
+      li:nth-child(1) {
+        .menu-entry-title {
+          background: #18a689;
+        }
+      }
     }
   }
   body.intercom-messenger-active {
-    a[data-elevio-module-name=intercom] {
-      background: lighten(@navy, 3%) !important;
-      color: white !important;
+    #side-menu > li:last-child {
+      li:nth-child(2) {
+        .menu-entry-title {
+          background: #18a689;
+        }
+      }
     }
+  }
+}
+
+#side-menu > li:last-child {
+  .menu-entry-title {
+    background: lighten(@navy, 3%);
+    color: white;
+  }
+  .menu-entry-title:hover {
+    background: #18a689;
   }
 }
