--- a/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
+++ b/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
@@ -8,7 +8,7 @@
           {{/each}}
         </div>
         <div class="btn-group">
-          {{#each periodOfOrders}}
+          {{#each periodOfOrdersButtons}}
             {{> orderReceiptsButtons}}
           {{/each}}
         </div>
