--- a/client/views/app/common/ingredient-item-editor/ingredient-editor.html
+++ b/client/views/app/common/ingredient-item-editor/ingredient-editor.html
@@ -68,7 +68,7 @@
       <div class="form-group">
         <label class="col-sm-12 control-label">
           Unit Ordered
-          <i class="fa fa-question-circle pull-right unit-ordered-popover btn-link" data-toggle="popover"
+          <i class="fa fa-question-circle unit-ordered-popover btn-link" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
@@ -102,7 +102,7 @@
       <div class="form-group">
         <label class="col-sm-12 control-label">
           Unit Used
-          <i class="fa fa-question-circle pull-right btn-link unit-used-popover" data-toggle="popover"
+          <i class="fa fa-question-circle btn-link unit-used-popover" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
@@ -119,7 +119,7 @@
       <div class="form-group">
         <label class="col-sm-12 control-label">
           How many {{unitsCaptions.used}} are there in a {{unitsCaptions.ordered}}?
-          <i class="fa fa-question-circle pull-right btn-link unit-size-popover" data-toggle="popover"
+          <i class="fa fa-question-circle btn-link unit-size-popover" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
