--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/section-editable/section-editable.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/section-editable/section-editable.html
@@ -1,3 +1,3 @@
 <template name="shiftBasicSectionEditable">
-  <a href="#" class="section" data-value="{{shift.section}}">{{sectionName shift.section}}</a>
+  <a href="#" class="section" data-value="{{section}}">{{sectionName section}}</a>
 </template>
