--- a/client/views/app/organization-structure/location-list-item/area-list-item/area-list-item.html
+++ b/client/views/app/organization-structure/location-list-item/area-list-item/area-list-item.html
@@ -1,6 +1,6 @@
 <template name="areaListItem">
-  <li class="list-group-item area-color-border"
-      style="display: block; border-left-color: {{color}};">
+  <li class="list-group-item area-list-item"
+      style="border-left-color: {{color}};">
 
     <a href="#" class="change-current-area-button {{#if isCurrentArea}}active{{/if}}">{{name}}</a>
 
