--- a/client/views/app/organization-structure/location-list-item/location-list-item.html
+++ b/client/views/app/organization-structure/location-list-item/location-list-item.html
@@ -1,7 +1,6 @@
 <template name="locationListItem">
-  <ul class="list-group" style="display: block;">
-    <li class="list-group-item lead"
-        style="display: block; cursor: pointer;">
+  <ul class="list-group locations-list">
+    <li class="list-group-item lead location-list-item">
       {{name}}
 
       {{#if canEditLocation}}
