--- a/client/views/app/organization-structure/organization-buttons/organization-buttons.html
+++ b/client/views/app/organization-structure/organization-buttons/organization-buttons.html
@@ -1,11 +1,10 @@
 <template name="organizationButtons">
   <div class="organization-buttons-container">
-
     {{#if isOrganizationOwner}}
-      <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons"><i
-          class="fa fa-fw fa-cog"></i></span>
-
       <div class="btn-group pull-right organization-settings-buttons">
+        <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons">
+          <i class="fa fa-fw fa-cog"></i>
+        </span>
         <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
           <i class="fa fa-fw fa-plus"></i>
         </button>
