--- a/client/views/app/organization-structure/location-list-item/area-list-item/area-settings/add-user-popup/add-user-popup.less
+++ b/client/views/app/organization-structure/location-list-item/area-list-item/area-settings/add-user-popup/add-user-popup.less
@@ -1,4 +1,4 @@
-@import "../../../../../stylesheets/theme-globals.import.less";
+@import "../../../../../../../stylesheets/theme-globals.import.less";
 
 .add-user-popup {
   clear: both;
