--- a/client/views/app/organization-structure/organization-structure.less
+++ b/client/views/app/organization-structure/organization-structure.less
@@ -1,72 +1,33 @@
-.organization-buttons-container {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.area-color-icon {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: -3px;
-}
-
-.area-color-border {
-  border-width: 0 1px 1px 7px !important;
-}
-
-.change-current-area.active {
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-.search-user-info-content {
-  padding: 5px;
-  margin-top: 5px;
-  cursor: pointer;
-  &:hover {
-    color: #fff;
-    background-color: #1AB394;
+.organizations-list {
+  .organization-name {
+    display: inline-block;
   }
 
-  .search-user-info-name {
-    margin-left: 5px;
+  .organization-buttons-container {
+    display: inline-block;
+    float: right;
+
+    i.fa {
+      font-size: 20px;
+    }
   }
 
-  .search-user-info-plus {
-    color: #fff;
-    margin: 9px 5px 0 0;
-  }
-}
+  .locations-list {
+    display: block;
 
-.user-photo-min {
-  max-height: 30px;
-  max-width: 30px;
-  border-radius: 5px;
-}
+    .location-list-item {
+      display: block;
+      cursor: pointer;
+    }
 
-.area-users {
-  padding: 50px 10px 20px;
-}
+    .area-list-item {
+      display: block;
+      border-width: 0 1px 1px 7px !important;
 
-.add-user-to-area-form {
-  margin-bottom: 10px;
-}
-
-.user-profile-image-container {
-  display: inline-block;
-  position: relative;
-
-  .remove-user-from-area {
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #fff;
-    padding: 1px 3px;
-    cursor: pointer;
-    opacity: 0;
+      .change-current-area-button.active {
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
   }
 }
