Hide organization settings button if it isn't current

--- a/client/views/app/organization-structure/organization-buttons/organization-buttons.html
+++ b/client/views/app/organization-structure/organization-buttons/organization-buttons.html
@@ -1,10 +1,7 @@
 <template name="organizationButtons">
   <div class="organization-buttons-container">
     {{#if isOrganizationOwner}}
-      <div class="btn-group pull-right organization-settings-buttons">
-        <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons">
-          <i class="fa fa-fw fa-cog"></i>
-        </span>
+      <div class="btn-group organization-settings-buttons">
         <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
           <i class="fa fa-fw fa-plus"></i>
         </button>
@@ -18,6 +15,11 @@
             </li>
           {{/if}}
         </ul>
+        {{#if isOrganizationCurrent}}
+          <span class="btn btn-sm btn-link organization-details-flyout organization-settings-buttons">
+          <i class="fa fa-fw fa-cog"></i>
+        </span>
+        {{/if}}
       </div>
     {{/if}}
   </div>
