--- a/client/views/app/organizations/organization-flyout-header/organization-settings/roles/add-role/add-role.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/roles/add-role/add-role.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">Role Name</label>
 
-      <div class="col-sm-10">
+      <div class="col-sm-10 role-name-input">
         <input type="text" class="form-control" name="name" required="required">
       </div>
     </div>
