Added task widget

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
@@ -21,6 +21,7 @@
         </form>
         {{#if note}}
           {{> commentsPanel id=note._id type='noteItem'}}
+          {{> taskWidget type='managerNotes' itemId=note._id dueDate=date}}
         {{/if}}
       {{else}}
         {{#if note}}
