Fixed Sunil's errors

--- a/client/stylesheets/globals/media.import.less
+++ b/client/stylesheets/globals/media.import.less
@@ -36,6 +36,11 @@
       text-align: right;
       display: block;
     }
+    .nav.navbar-top-links.navbar-right > li:first-child {
+      position: absolute;
+      right: 20px;
+      top: 14px;
+    }
   }
 }
 
@@ -79,6 +84,6 @@
     position: absolute;
     right: 20px;
     top: 14px;
-}
+  }
 
 }
