Added comments panel

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
@@ -1,7 +1,10 @@
 <template name="managerNoteWidget">
   <div class="manager-note-widget">
     {{#if Template.subscriptionsReady}}
-      {{> autosaveTextEditor text=note.text saveChanges=saveNote readOnly=readOnly}}
+      {{> autosaveTextEditor text=textOfNote saveChanges=saveNote readOnly=readOnly}}
+      {{> commentsPanel id=note._id type='noteItem'}}
+    {{else}}
+      No subscribe
     {{/if}}
   </div>
 </template>
