--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
@@ -3,6 +3,7 @@
     {{#if Template.subscriptionsReady}}
       {{> autosaveTextEditor text=textOfNote saveChanges=saveNote readOnly=readOnly}}
       {{> commentsPanel id=note._id type='noteItem'}}
+      {{> taskWidget type='managerNotes' itemId=note._id dueDate=date}}
     {{else}}
       No subscribe
     {{/if}}
