--- a/client/views/app/organization-structure/location-list-item/location-settings/location-settings.html
+++ b/client/views/app/organization-structure/location-list-item/location-settings/location-settings.html
@@ -16,7 +16,15 @@
         </div>
       </div>
 
-      {{> editLocationForm locationDoc=location submitCaption="Save" onSubmit=onLocationSubmit onCancel=onCancel}}
+      {{#if isLocationDetailsLoaded}}
+        {{> editLocationForm locationDoc=location submitCaption="Save" onSubmit=onLocationSubmit onCancel=onCancel}}
+      {{else}}
+        <div class="text-center">
+          <h1>
+            <i class="fa fa-spinner fa-pulse"></i>
+          </h1>
+        </div>
+      {{/if}}
 
       {{#if isOrganizationOwner}}
         <div class="row">
