--- a/client/views/app/organization-structure/organization-buttons/organization-settings/roles/add-role/permission-checklist/permission-checklist.html
+++ b/client/views/app/organization-structure/organization-buttons/organization-settings/roles/add-role/permission-checklist/permission-checklist.html
@@ -1,7 +1,7 @@
 <template name="permissionsChecklist">
   {{#each actions}}
     <div class="col-xs-3 col-sm-4 col-md-4 col-lg-3">
-      <div class="checkbox">
+      <div class="permission-checkbox-wrapper">
         <input type="checkbox" name="permissions" value="{{value}}" id="perm-{{value}}"/>
         <label for="perm-{{value}}">
           {{text}}
