--- a/client/views/app/organization-structure/organization-buttons/create-area/create-area.html
+++ b/client/views/app/organization-structure/organization-buttons/create-area/create-area.html
@@ -17,7 +17,7 @@
         <label class="col-sm-2 control-label">Area Location</label>
 
         <div class="col-sm-10">
-          {{> selectComponent name='locationId' values=locations selected=state$locationId}}
+          {{> selectComponent name='locationId' values=locations selected=locationId}}
         </div>
       </div>
 
@@ -25,7 +25,7 @@
         <label class="col-sm-2 control-label">Area Color</label>
 
         <div class="col-sm-10">
-          {{> colorPicker onColorChange=onColorChange checkedColor=state$color}}
+          {{> colorPicker onColorChange=onColorChange checkedColor=color}}
         </div>
       </div>
 
