New permission checking system + apply it to organization structure

--- a/client/views/app/organization-structure/organization-buttons/organization-buttons.html
+++ b/client/views/app/organization-structure/organization-buttons/organization-buttons.html
@@ -1,6 +1,6 @@
 <template name="organizationButtons">
   <div class="organization-buttons-container">
-    {{#if isOrganizationOwner}}
+    {{#if isOwner}}
       <div class="btn-group organization-settings-buttons">
         <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
           <i class="fa fa-fw fa-plus"></i>
