edited meeting flyout

--- a/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-meeting/event-meeting.html
+++ b/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-meeting/event-meeting.html
@@ -4,6 +4,7 @@
       {{> meetingDetailsTable meeting=meeting}}
 
       <div class="col-xs-12 event-description-row">
+        {{> eventGoTo route="meetingDetails" templateData=goToItemTemplateData}}
         {{> eventRemove}}
       </div>
     </div>
