--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -6,7 +6,7 @@
 
 .calendar-container {
   margin-top: 20px;
-  padding: 0 0 38px 0;
+  padding: 0;
   background-color: #fff;
 
   h3 {
@@ -36,6 +36,12 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 841px) {
+  .calendar-container {
+    padding: 0 0 38px 0;
   }
 }
 
